css/style.css
html{height:100%}
iframe{width:inherit;height:auto;min-height:320px;min-width:480px}
p object,p embed{min-width:480px;min-height:320px;width:100%;height:auto}
article{padding-top:3em !important;padding-bottom:3em !important}
blockquote{border-left:.5em solid #ff584c;margin-top:1.5em;margin-bottom:1.5em;margin-left:0;color:#808080}
blockquote p{margin-left:1.5em}
body{height:100%;font-size:1.5em;font-family:"Source Sans Pro",sans-serif;font-weight:300;line-height:1.5em;color:#16161d;background-color:#fcfcfc;text-rendering:optimizeLegibility}
a{color:#ff584c;transition-property:color;-webkit-transition-property:color;-moz-transition-property:color;-o-transition-property:color;transition-duration:.5s;-webkit-transition-duration:.5s;-moz-transition-duration:.5s;-o-transition-duration:.5s}
a:visited{color:#bf4942}
a:hover{color:#ff8e94}
::selection{background:#ff584c;color:#fcfcfc}
.slogan{color:#808080}
header{margin-bottom:3em}
footer{height:5em;margin-top:3em;background-color:#16161d;border-top:10px solid #ff584c;color:#fcfcfc;position:relative}
p{margin:0;padding:0}
p + p{margin-top:1.5em}
p.index-paragraph + p.index-paragraph{margin-top:.5em}
pre{margin-top:1.5em;margin-bottom:1.5em;font-family:"Source Code Pro",monospace !important;font-size:.75em;color:#808080;line-height:1em}
ul,ol{margin-top:1.5em;margin-bottom:1.5em;margin-left:1.5em}
li + li{margin-top:.5em}
b,strong{font-weight:bold}
img{width:100%;vertical-align:middle;border-radius:.5em}
.grid{overflow:visible}
div#header{font-size:3em;line-height:1.5em;transition-property:color;-webkit-transition-property:color;-moz-transition-property:color;-o-transition-property:color;transition-duration:.5s;-webkit-transition-duration:.5s;-moz-transition-duration:.5s;-o-transition-duration:.5s}
div#header:hover{color:#ff584c;cursor:pointer}
div.social,div.navigation{text-align:center}
.centered{text-align:center}
.paginate{padding-top:3em}
.page_number{margin-left:1.5em;margin-right:1.5em}
body > div.content{min-height:100%;padding:0 1em}
div.content{max-width:800px;margin:0 auto}
div.content > h1{font-weight:lighter;font-size:1.5em;margin-left:-1em}
div.embed.video{margin:1.5em auto;min-width:320px;width:auto;max-width:480px}
div.date{color:#808080;text-align:right}
div.metadata{padding-bottom:1.5em}
h1.title{border-bottom:3px solid #16161d;font-size:1.5em;line-height:1.5em;margin:0}
div.CodeRay{margin:1.5em 0;background-color:#fff;border:1px solid #16161d;border-radius:.5em}
span.line-numbers{margin:0 .5em}

